<resources>
    <string name="app_name" translatable="false">Ting.com</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_email" translatable="false">Email Address</string>
    <string name="login_password" translatable="false">Password</string>
    <string name="login_sign_in_with_google" translatable="false">Sign In With google</string>
    <string name="login_signup" translatable="false">Signup Now</string>
    <string name="login_forgot_password" translatable="false">Forgot Password ?</string>
    <string name="signup_next" translatable="false">Next</string>
    <string name="signup_prev" translatable="false">Prev</string>
    <string name="signup_id" translatable="false">Identity</string>
    <string name="signup_about" translatable="false">About</string>
    <string name="signup_address" translatable="false">Address</string>
    <string name="signup_password" translatable="false">Password</string>
    <string name="signup_name" translatable="false">Full Name</string>
    <string name="signup_username" translatable="false">Username</string>
    <string name="signup_gender" translatable="false">Gender</string>
    <string name="signup_dob" translatable="false">Date Of Birth</string>
    <string name="signup_address_type" translatable="false">Set Address As</string>
    <string name="signup_use_location" translatable="false">Use This Location</string>
    <string name="signup_other_address_type" translatable="false">Enter Address Type</string>
    <string name="signup_other_address_type_other" translatable="false">Address Type</string>
    <string name="signup_confirm_password" translatable="false">Confirm Password</string>
    <string name="signup_finish" translatable="false">Finish</string>
    <string name="reset_pwd_title" translatable="false">Reset Password</string>
    <string name="reset_pwd_text" translatable="false">You will receive an email message containing a link that you will use to reset your
        password. The link only lasts 24 hours
    </string>
    <string name="global_submit" translatable="false">Submit</string>
    <string name="global_ok" translatable="false">OK</string>
    <string name="global_cancel" translatable="false">Cancel</string>
    <string name="global_add" translatable="false">Add</string>
    <string name="global_restaurants" translatable="false">Restaurants</string>
    <string name="global_restaurant_sub" translatable="false">Discover Restaurants around and near your location</string>
    <string name="global_show_more" translatable="false">Show More</string>
    <string name="global_reviews" translatable="false">REVIEWS</string>
    <string name="global_likes" translatable="false">LIKES</string>
    <string name="global_about" translatable="false">ABOUT</string>
    <string name="global_book" translatable="false">BOOK</string>
    <string name="server_client_id" translatable="false">1033794072902-sumfcak8j137q01u255h912slil7v32v.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">498926397470599</string>
    <string name="nav_bar_discovery" translatable="false">Discovery</string>
    <string name="nav_bar_restaurants" translatable="false">Restaurants</string>
    <string name="nav_bar_moments" translatable="false">Moments</string>
    <string name="nav_bar_user_menu" translatable="false">Menu</string>
    <string name="user_profile_my_menu" translatable="false">My Menu</string>
    <string name="user_profile_profile" translatable="false">Profile</string>
    <string name="user_profile_moments" translatable="false">Moments</string>
    <string name="user_profile_restaurants" translatable="false">Restaurants</string>
    <string name="user_profile_orders" translatable="false">Orders</string>
    <string name="user_profile_booking" translatable="false">Bookings</string>
    <string name="user_profile_others" translatable="false">OTHER</string>
    <string name="user_profile_settings" translatable="false">Settings</string>
    <string name="user_profile_logout" translatable="false">Logout</string>
    <string name="user_profile_edit" translatable="false">Edit Profile</string>
    <string name="edit_user_profile_save" translatable="false">SAVE</string>
    <string name="edit_user_profile_image" translatable="false">Change Profile Image</string>
    <string name="edit_user_profile_select_image" translatable="false">Select Image</string>
    <string name="edit_user_profile_login" translatable="false">Log In</string>
    <string name="edit_user_profile_email" translatable="false">Edit Email</string>
    <string name="edit_user_profile_email_old" translatable="false">Old Email Address</string>
    <string name="edit_user_profile_email_new" translatable="false">New Email Address</string>
    <string name="edit_user_profile_password" translatable="false">Edit Password</string>
    <string name="edit_user_profile_password_old" translatable="false">Old Password</string>
    <string name="edit_user_profile_password_new" translatable="false">New Password</string>
    <string name="edit_user_profile_private" translatable="false">Private Information</string>
    <string name="edit_user_profile_phone_number" translatable="false">Phone Number</string>
    <string name="edit_user_profile_public" translatable="false">Public Information</string>
    <string name="edit_user_profile_addresses" translatable="false">Addresses</string>
    <string name="error_internet" translatable="false">No Internet Connection</string>
    <string name="restaurant_specification" translatable="false">SPECIFICATIONS</string>
    <string name="restaurants_filter" translatable="false">Filter Restaurants</string>
    <string name="invalid_email_address" translatable="false">Invalid email address</string>
    <string name="email_address" translatable="false">Email address</string>
    <string name="hex" translatable="false">HEX:</string>
    <string name="transparency" translatable="false">Transparency</string>
    <string name="required" translatable="false">Required</string>
    <string name="password" translatable="false">Password</string>
    <string name="input_not_a_given_option" translatable="false">Input not a given option</string>
    <string name="name" translatable="false">Name</string>
    <string name="phone_number" translatable="false">Phone number</string>
    <string name="user" translatable="false">User</string>
    <string name="strong_pw_requirements" translatable="false">Must contain a number, a lower- and uppercase letter and a special character</string>
    <string name="letters_only_error" translatable="false">May only contain letters (A-Z)</string>
    <string name="alphanumeric_only_error" translatable="false">May only contain alphanumerical chars</string>
    <string name="rrggbb" translatable="false">RRGGBB</string>
    <string name="pin" translatable="false">Pin code</string>
    <string name="wrong_pin" translatable="false">Wrong pin</string>
    <string name="date" translatable="false">Date</string>
    <string name="time" translatable="false">Time</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="crop_image_activity_title" translatable="false">Image Cropper</string>
    <string name="crop_image_menu_rotate_left" translatable="false">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right" translatable="false">Rotate</string>
    <string name="crop_image_menu_crop" translatable="false">Crop</string>
    <string name="crop_image_menu_flip" translatable="false">Flip</string>
    <string name="crop_image_menu_flip_horizontally" translatable="false">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically" translatable="false">Flip vertically</string>
    <string name="pick_image_intent_chooser_title" translatable="false">Select source</string>
    <string name="crop_image_activity_no_permissions" translatable="false">Cancelling, required permissions are not granted</string>
    <string name="image_editor_library_name">Photo Editor</string>
    <string name="image_editor_no_images">No image found</string>
    <string name="image_editor_images">%d images</string>
    <string name="image_editor_done">DONE</string>
    <string name="image_editor_apply">APPLY</string>
    <string name="image_editor_stickers">Stickers</string>
    <string name="image_editor_filter">Filters</string>
    <string name="image_editor_crop">Crop</string>
    <string name="image_editor_rotate">Rotate</string>
    <string name="image_editor_text">Text</string>
    <string name="image_editor_brush">Brush</string>
    <string name="image_editor_eraser">Eraser</string>
    <string name="image_editor_edit">Edit</string>
    <string name="image_editor_brightness">Brightness</string>
    <string name="image_editor_saturation">Saturation</string>
    <string name="image_editor_size">Size</string>
    <string name="image_editor_opacity">Opacity</string>
    <string name="colorpicker_errHex">Hex Code Format incorrect</string>
    <string name="colorpicker_btnSelectColor">Select</string>
    <string name="image_editor_saving_image">Saving …</string>
    <string name="image_editor_input_hint">Input Text …</string>
    <string name="image_editor_not_selected">Please choose an image for edit</string>
    <string name="image_editor_auto_newline">AutoNewline</string>
    <string name="image_editor_save_error">Save error!</string>
    <string name="image_editor_load_error">Failed to load the image!</string>
    <string name="image_editor_loading">Loading…</string>
    <string name="image_editor_pick_a_color">Pick a color</string>
    <string name="image_editor_free_size">FREE</string>
    <string name="image_editor_fit_image">ORIGINAL</string>
    <string name="image_editor_square">SQUARE</string>
    <string name="image_editor_ratio3_4">3:4</string>
    <string name="image_editor_ratio4_3">4:3</string>
    <string name="image_editor_ratio9_16">9:16</string>
    <string name="image_editor_ratio16_9">16:9</string>
    <string-array name="image_editor_filters">
        <item>Origin</item>
        <item>Soft</item>
        <item>Black</item>
        <item>Classic</item>
        <item>Gorgeous</item>
        <item>Retro</item>
        <item>Grace</item>
        <item>Film</item>
        <item>Memory</item>
        <item>Yogurt</item>
        <item>Fleeting</item>
        <item>Shine</item>
    </string-array>
    <string-array name="image_editor_filter_drawable_list" translatable="false">
        <item>filter_1</item>
        <item>filter_2</item>
        <item>filter_3</item>
        <item>filter_4</item>
        <item>filter_5</item>
        <item>filter_6</item>
        <item>filter_7</item>
        <item>filter_8</item>
        <item>filter_9</item>
        <item>filter_10</item>
        <item>filter_11</item>
        <item>filter_12</item>
    </string-array>
    <string-array name="image_editor_types" translatable="false">
        <item>type1</item>
        <item>type2</item>
        <item>type3</item>
        <item>type4</item>
        <item>type5</item>
        <item>type6</item>
    </string-array>
    <string-array name="image_editor_type_names">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
        <item>Type 6</item>
    </string-array>
    <string name="image_editor_more">More</string>
    <string name="image_editor_exit_without_save">The edited image is not saved. Do you want to exit? </string>
    <string name="image_editor_confirm">Confirm</string>
    <string name="image_editor_cancel">Cancel</string>
    <string name="image_editor_beauty">Beauty</string>
    <string name="image_editor_smooth">Smoothness</string>
    <string name="image_editor_white_skin">Skin Tone</string>
    <string name="default_progressbar" translatable="false">Default Progressbar:</string>
</resources>