<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp"
        android:layout_margin="15dp">

    <TextView
            android:id="@+id/user_profile_edit_email_text"
            android:text="@string/edit_user_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="22sp"
            android:textColor="@color/colorGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/user_profile_edit_email_old"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_text"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:hint="@string/edit_user_profile_email_old"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorLightGray"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/user_profile_edit_email_text"
            tools:ignore="Autofill"/>

    <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/user_profile_edit_email_new"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_text"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:hint="@string/edit_user_profile_email_new"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorLightGray"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/user_profile_edit_email_old"
            tools:ignore="Autofill"/>

    <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/user_profile_edit_email_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_text"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:hint="@string/login_password"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:textColorHint="@color/colorLightGray"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/user_profile_edit_email_new"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/update_user_email"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:text="@string/global_ok"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_transparent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_profile_edit_email_password"/>

    <Button
            android:id="@+id/cancel_user_email"
            android:layout_marginRight="15dp"
            android:layout_width="80dp"
            android:layout_height="38dp"
            android:text="@string/global_cancel"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_transparent"
            android:textColor="@color/colorGoogleRedTwo"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintEnd_toStartOf="@id/update_user_email"
            app:layout_constraintTop_toBottomOf="@id/user_profile_edit_email_password"
            tools:ignore="RtlHardcoded"/>

</androidx.constraintlayout.widget.ConstraintLayout>