<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_paint"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/paint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_edit"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_filter"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/filter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_filter"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_crop"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/crop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_crop"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_rotate"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/rotate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_rotate"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_text"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_text"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_stickers"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_stickers" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_stickers"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_brightness"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/brightness" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_brightness"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_contrast"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/dropper" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_saturation"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_beauty"
                style="@style/ImageEditorOptionStyle"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageEditorIconStyle"
                    android:layout_gravity="center"
                    android:src="@drawable/beauty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/image_editor_beauty"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/image_edit_text_size"
                    android:fontFamily="@font/poppins_regular"
                    tool:text="Text" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>

