<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ResetPassword">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            tools:ignore="UselessParent">

        <TextView
                android:id="@+id/appNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="34dp"
                android:fontFamily="@font/poppins_medium"
                tools:ignore="SpUsage"
        />

        <android.support.constraint.ConstraintLayout
                android:id="@+id/resetPasswordForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:layout_below="@+id/appNameText"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/resetTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/reset_pwd_title"
                    android:textSize="24sp"
                    android:textColor="@color/colorGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/resetText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/reset_pwd_text"
                    android:textSize="14sp"
                    android:textColor="@color/colorLightGray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/resetTitle"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/resetText">

                <TextView
                        android:id="@+id/resetPasswordEmailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:text="@string/login_email"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />

                <EditText
                        android:id="@+id/resetPwdEmailInput"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:background="@drawable/input_login"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEmailText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="Autofill,LabelFor"/>

                <Button
                        android:id="@+id/submitResetPasswordBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/global_submit"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:background="@drawable/button_login"
                        app:layout_constraintTop_toBottomOf="@+id/resetPwdEmailInput"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</RelativeLayout>